--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ humantime = "2.1.0"
 pinger="1.1.1"
 sysinfo = "0.30.7"
 url="2.5.0"
+flexi_logger = { version = "0.28.0", features = ["specfile_without_notification", "async"] }
+log = "0.4.21"
+anyhow = "1.0.81"
+log-panics = { version = "2.1.0", features = []}
