--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,13 @@ flexi_logger = { version = "0.28.0", features = ["specfile_without_notification"
 log = "0.4.21"
 anyhow = "1.0.81"
 log-panics = { version = "2.1.0", features = []}
+
+[target.'cfg(windows)'.dependencies]
+windows-service = "0.6.0"
+winreg = "0.52.0"
+
+[profile.release]
+opt-level = 3
+debug = false
+lto = true
+strip = true
