--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
+    - name: Test
+      run: cargo test
     - name: Build
       run: cargo build --release
     - uses: actions/upload-artifact@v4
